fix overflow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f7f7f7;
     margin: 0;
-    padding: 20px;
    width: 100%;
    overflow-x: hidden;
    height: 100%;
